- upload to website
	- win32
		- buildrelease.bat
		- zip up xenowar subdirectory
	- android
		- down in unflobtactical\android\ufoattack_1\bin
		- grab apk and rename
	Go!


- test incredible (from website)
- test galaxy tab (from website)

- Sign & Publish
	- http://developer.android.com/guide/publishing/app-signing.html#ExportWizard
	- publish
	- check on Samsung

Release v2.7

- Can no longer target aliens you can't see

Release v2.6

New aliens! Improved graphics! Flares and smoke! 2.6 is a big upgrade to the game,
with bug fixes thrown in as well.

Special thanks to Johan Forsberg for the icon graphics.

- Researching alien corpses now shows you a picture of the alien.
- New title screen.
- Updated help images.
- Psi attacks & squid. Psi shields.
- Addition 2-stage alien.
- Reworked MCAN. No longer has snap fire. Added flares and smoke rockets, which explode at distance.
- Added new background images.
- Fixed the alien AI to detect weapon blasts.
- Fixed some (scary) save/load bugs.
- Can no longer "sell all" soldiers and scientists


Release v2.5

Improved text quality, additional save game support, and many bug fixes.

- Save game support.
- Higher quality text rendering. Text should look crisper across all screens.
- Support for font modding.
- Hired soldiers sell/fire for much less money. Fixes expoit.
- Aliens should now calculate line of site correctly and not blast walls repeatedly
- Reaction fire AI greatly improved. Should shoot own team, blow up weapons in face, much less often.
- Sometimes units don't scroll onscreen - fixed.
- Some bugs in visibility detection were fixed. Soldiers should no longer stop needlessly 
  when an enemy has already been spotted by a teammate.
- New battleship model.
- Builder.exe is now hardened somewhat against bad inputs, and gives more errors. Particuarly will now detect correct texture sizes.
- Map objects that are destroyed no longer obscure vision. (Blocking items works; obscuring items did not.)

